# gofabian.github.io

./: .gitignore  README.md  analysis.py  batch.py  build.py  build_fullday.py  build_halfday.py  constituents.csv  data.py  fileio.py  finance.py  github.py  htmlgen.py  ibgateway.sh  indication.py  log.py  logic.py  main.py  pyproject.toml  schedule.py  sector.py  signals.py  source.py  stocks.py  website.py
cache/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APTV.csv  (+462 more)
data/: A.json  AAPL.json  AAPL_attrs.json  ABBV.json  ABBV_attrs.json  ABNB.json  ABNB_attrs.json  ABT.json  ABT_attrs.json  ACGL.json  ACGL_attrs.json  ACN.json  ACN_attrs.json  ADBE.json  ADBE_attrs.json  ADI.json  ADI_attrs.json  ADM.json  ADM_attrs.json  ADP.json  ADP_attrs.json  ADSK.json  ADSK_attrs.json  AEE.json  AEE_attrs.json  AEP.json  AEP_attrs.json  AES.json  AES_attrs.json  AFL.json  AFL_attrs.json  AIG.json  AIG_attrs.json  AIZ.json  AIZ_attrs.json  AJG.json  AJG_attrs.json  AKAM.json  AKAM_attrs.json  ALB.json  (+936 more)
data_2025/: AAPL.json  AAPL_attrs.json  ABBV.json  ABBV_attrs.json  ABNB.json  ABNB_attrs.json  ABT.json  ABT_attrs.json  ACN.json  ACN_attrs.json  ADBE.json  ADBE_attrs.json  ADI.json  ADI_attrs.json  ADP.json  ADP_attrs.json  AJG.json  AJG_attrs.json  AMAT.json  (+287 more)
(+42090 files in other folders)
