[tool.poetry]
name = "stock-screener"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
yfinance = {extras = ["nospam"], version = "^0.2.49"}
plotly = "^5.24.1"
jinja2 = "^3.1.4"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
