[project]
name = "stock-screener"
version = "0.1.0"
description = ""
authors = [
    { name = "Fabian Iffländer", email = "fabian.ifflaender@posteo.de" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ib-async (>=2.0.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
